--- a/csp/app/scripts/components/cspContactList/tpl-csp-applicant-list.html
+++ b/csp/app/scripts/components/cspContactList/tpl-csp-applicant-list.html
@@ -1,19 +1,13 @@
 <ng-form name="cspApplListCtrl.applicantList" novalidate="novalidate">
-<div  data-ng-repeat="applicantRecord in cspApplListCtrl.model track by $index ">
-    <div class="row">
-        <fieldset>
-            <div class="col-xs-12">
-                <legend ng-if="applicantRecord.role.applicant">{{'APPL_TITILE'|translate}}
-                </legend>
-                <legend ng-if="applicantRecord.role.billing && !applicantRecord.role.applicant">
-                    {{'BILLING_TITLE' |translate}}
-                </legend>
-            </div>
-            <cmp-csp-applicant record="applicantRecord" alias="cspApplListCtrl.setAlias(applicantRecord)"
-                               add-applicant="cspApplListCtrl.addApplicant()" show-errors="cspApplListCtrl.showErrors()"
-                               update-error-summary="cspApplListCtrl.updateErrorSummary()"
-                               delete-applicant="cspApplListCtrl.deleteApplicant()"></cmp-csp-applicant>
-        </fieldset>
+
+    <div data-ng-repeat="applicantRecord in cspApplListCtrl.model track by $index ">
+        <div>
+                <cmp-csp-applicant record="applicantRecord" alias="cspApplListCtrl.setAlias(applicantRecord)"
+                                   add-applicant="cspApplListCtrl.addApplicant()"
+                                   show-errors="cspApplListCtrl.showErrors()"
+                                   update-error-summary="cspApplListCtrl.updateErrorSummary()"
+                                   delete-applicant="cspApplListCtrl.deleteApplicant()"></cmp-csp-applicant>
+
+        </div>
     </div>
-</div>
 </ng-form>
