--- a/dossier/app/scripts/templates/dossier/tpl-dossier-thera-en.html
+++ b/dossier/app/scripts/templates/dossier/tpl-dossier-thera-en.html
@@ -1,7 +1,1 @@
-<div>
-    <ul>
-        <li>Record the appropriate therapeutic and pharmacological classification for the drug, e.g. calcium channel
-            blocker, biological response modifier, histamine H2-receptor antagonist, disinfectant.
-        </li>
-    </ul>
-</div>
+<div><ul><li>Record the appropriate therapeutic and pharmacological classification for the drug, e.g. calcium channel blocker, biological response modifier, histamine H2-receptor antagonist, disinfectant.</li></ul></div>
