--- a/repDiff/app/scripts/components/diff-main/tpl-diff-main.html
+++ b/repDiff/app/scripts/components/diff-main/tpl-diff-main.html
@@ -40,18 +40,18 @@
                 <h2 class="panel-title">3. Comparison Results</h2>
             </header>
             <div class="panel-body">
-                <div class="row">
-                    <div class="row" aria-live='polite'
-                         ng-if="ctrl.listResults && ctrl.listResults.length==0">
-                        <div class="col-xs-12 ">
-                            <p><br/><span>No differences have been detected</span></p>
-                        </div>
+                <div class="row" aria-live='polite'
+                     ng-if="ctrl.listResults && ctrl.listResults.length==0">
+                    <div class="col-xs-12">
+                        <p>
+                            <b><span> No differences have been detected</span></b>
+                        </p>
                     </div>
                 </div>
                 <div class="row margin-top-medium">
                     <div class="col-sm-12 button-group">
-                        <button ng-click="ctrl.expandAll()">Expand all</button>
-                        <button ng-click="ctrl.collapseAll()">Collapse all</button>
+                        <button class="btn btn-default" ng-click="ctrl.expandAll()">Expand all</button>
+                        <button class="btn btn-default" ng-click="ctrl.collapseAll()">Collapse all</button>
                     </div>
                 </div>
                 <div ng-if="ctrl.listResults.length>0">
@@ -71,7 +71,7 @@
     </div>
     <div>
         <div class="xs-col-12 btn-group">
-            <button ng-click="ctrl.showRaw()">Show / Hide Raw Data</button>
+            <button class=" btn btn-default" ng-click="ctrl.showRaw()">Show / Hide Raw Data</button>
         </div>
     </div>
     <div class="row margin-top-large">
@@ -107,6 +107,10 @@
                 </div>
             </details>
         </details>
+    </div>
+    <div>
+        <button ng-click="ctrl.test()">Test External Link</button>
+        <button ng-click="ctrl.testfr()">Test Internal Link</button>
     </div>
     <div class="row">
         <div class="col-xs-12">
