--- a/activity/app/styles/rep.css
+++ b/activity/app/styles/rep.css
@@ -179,3 +179,32 @@ input[type="date"] {
 .rep-close {
     opacity: 0.7;
 }
+.rep-link{
+    color: #0535d2;
+    text-decoration: underline;
+}
+ strong.required {
+    color: #d3080c !important;
+ font-weight: 700;
+}
+
+.legend-rep-h3{
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 23px;
+    font-size: 22px;
+    line-height: inherit;
+    color: #333;
+    border: 0;
+    font-family: Helvetica, Arial, sans-serif !important;
+    font-weight: 700 !important;
+}
+
+.checkbox-pi {
+     margin-left: 25px;
+ }
+
+.label-pi {
+    font-size: 16px;
+}
