--- a/activity/app/scripts/templates/activity/tpl-activity-labelling-change-fr.html
+++ b/activity/app/scripts/templates/activity/tpl-activity-labelling-change-fr.html
@@ -1,1 +1,1 @@
-<div><ul><li>fr_Label update (including but not limited to Product Monograph update, inner and outer label update) to match label updates of the licensor.</li><li>fr_On the RA template: Use existing company ID and dossier ID.</li></ul></div>
+<div><ul><li>fr_Label update (including but not limited to Product Monograph update, inner and outer label update) to match label updates of the licensor.</li></ul></div><div class="row alert alert-info" role="alert" aria-live="polite"><span>fr_On the RA template: Use existing company ID and dossier ID.</span></div>
