RT form helptext update

--- a/transaction/app/scripts/templates/transaction/tpl-transaction-save-en.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-save-en.html
@@ -1,1 +1,1 @@
-<div><ul><li>Click here to generate the final XML file.</li><li>The final XML file does not need to be provided to Health Canada for approval.</li><li>Refer to the REP guidance document for detailed information.</li></ul></div>
+<div><ul><li>Submit the Final RT XML file to Health Canada with the regulatory transaction/sequence using the Common Electronic Submission Gateway (CESG).</li><li>Refer to the REP guidance document for detailed information.</li></ul></div>
