--- a/transaction/app/scripts/templates/transaction/tpl-transaction-save-fr.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-save-fr.html
@@ -1,1 +1,1 @@
-<div><ul><li>FRENCH Click here to generate the final XML file.</li><li>The final XML file does not need to be provided to Health Canada for approval.</li><li>Refer to the REP guidance document for detailed information.</li></ul></div>
+<div><ul><li>fr_Submit the Final RT XML file to Health Canada with the regulatory transaction/sequence using the Common Electronic Submission Gateway (CESG).</li><li>fr_Refer to the REP guidance document for detailed information.</li></ul></div>
