PI form helptext update

--- a/drugProduct/app/scripts/templates/drugProduct/tpl-drugProduct-file-fr.html
+++ b/drugProduct/app/scripts/templates/drugProduct/tpl-drugProduct-file-fr.html
@@ -1,1 +1,1 @@
-<div><h3 class="rep-margin-minus-top">Files to load</h3><ul><li>FRENCH Working Copy (.hcsc) – when continuing with an incomplete Dossier template.</li><li>Final XML – when amending an approved Dossier enrolment.</li><li>A file should not be loaded if it is the initial enrolment for the Dossier.</li></ul></div>
+<div><ul><li>fr_A file should not be loaded if it is the initial enrolment.</li><li>Working Copy (.hcsc) – when continuing with an incomplete template.</li><li>Final XML (.xml) – when revising Product Information XML file.</li></ul></div>
