--- a/drugProduct/app/scripts/templates/drugProduct/tpl-drugProduct-save-en.html
+++ b/drugProduct/app/scripts/templates/drugProduct/tpl-drugProduct-save-en.html
@@ -1,1 +1,1 @@
-<div><ul><li>Click the "Generate Final XML" button to generate the final XML file.</li><li>Submit the created file to Health Canada using the Common Electronic Submission Gateway (CESG).</li><li>Refer to the REP guidance document for detailed information.</li></ul></div>
+<div><ul><li>Click here to generate the final XML file.</li><li>The final XML file does not need to be provided to Health Canada for approval.</li><li>Refer to the REP guidance document for detailed information.</li></ul></div>
