RT form helptext update

--- a/transaction/app/scripts/templates/transaction/tpl-transaction-file-en.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-file-en.html
@@ -1,1 +1,1 @@
-<div><ul><li>A file should not be loaded if it is the initial enrolment.</li><li>Working Copy (.hcsc) – when continuing with an incomplete template.</li><li>Final XML (.xml) – when creating subsequent Regulatory Transaction enrolment.</li></ul></div>
+<div><ul><li>A file should not be loaded if it is the initial enrolment.</li><li>Working Copy (.hcsc) – when continuing with an incomplete template.</li><li>Final XML (.xml) – when creating a subsequent Regulatory Transaction XML file.</li></ul></div>
