--- a/transaction/app/scripts/templates/transaction/tpl-transaction-file-fr.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-file-fr.html
@@ -1,1 +1,1 @@
-<div><ul><li>fr_A file should not be loaded if it is the initial enrolment.</li><li>fr_Working Copy (.hcsc) – when continuing with an incomplete template.</li><li>fr_Final XML (.xml) – when creating subsequent Regulatory Transaction enrolment.</li></ul></div>
+<div><ul><li>fr_A file should not be loaded if it is the initial enrolment.</li><li>fr_Working Copy (.hcsc) – when continuing with an incomplete template.</li><li>fr_Final XML (.xml) – when creating a subsequent Regulatory Transaction XML file.</li></ul></div>
