--- a/transaction/app/scripts/templates/transaction/tpl-transaction-company-en.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-company-en.html
@@ -1,1 +1,1 @@
-<div><ul><li>*Note: if this person/company is not the sponsor identified by the Company ID at the top of the form, please ensure a letter of authorization signed by the manufacturer/sponsor company must be provided in folder 1.2.6 of the eCTD sequence for each regulatory activity.</li></ul></div>
+<div><ul><li>*Note: if the company differs from the sponsor, a letter of authorization signed by the manufacturer/sponsor must be provided in folder 1.2.6 of the regulatory transaction.</li></ul></div>
