--- a/transaction/app/scripts/templates/transaction/tpl-transaction-control-en.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-control-en.html
@@ -1,1 +1,1 @@
-<div><ul>For regulatory transactions that do not have require a control number (e.g. Level III Notice of change, UDRA – DIN cancelations, UDRA - Notification Interruption of sale, UDRA - Sequence clean-up, etc.), enter 000000.</ul></div>
+<div><ul>For regulatory transactions that do not have require a control number (e.g.Post-Notice of Compliance Change - Level III, UDRA – DIN cancelations, UDRA - Notification Interruption of sale, UDRA - Sequence clean-up, etc.), enter 000000.</ul></div>
