--- a/transaction/app/scripts/templates/transaction/tpl-transaction-control-en.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-control-en.html
@@ -1,1 +1,1 @@
-<div><ul><li>For regulatory transactions that do not have require a control number (e.g. Post-Notice of Compliance Change - Level III, UDRA – DIN cancelations, UDRA - Notification Interruption of sale, UDRA - eCTD Dossier Clean-up), enter 000000.</li></ul></div>
+<div><ul><li>For regulatory transactions that do not have require a control number (e.g. Post-Notice of Compliance Change - Level III, UDRA – DIN cancellations, UDRA - Notification Interruption of sale, UDRA - eCTD Dossier Clean-up), enter 000000.</li></ul></div>
