--- a/transaction/app/styles/rep.css
+++ b/transaction/app/styles/rep.css
@@ -57,6 +57,13 @@ label > select {
 .rep-margin-top {
     margin-top: 5px;
 }
+.rep-margin-top-12 {
+    margin-top: 12px;
+}
+
+.rep-margin-left {
+    margin-left: 50px;
+}
 
 .rep-margin-minus-top {
     margin-top: -5px !important;
@@ -101,7 +108,7 @@ label > select {
     width: 100% !important;
     font-weight: normal;
     font-size: 16px;
-    padding-top: 6px;
+    padding-top: 0px;
     padding-right: 0px;
     padding-bottom: 0px;
     padding-left: 0px;
@@ -109,6 +116,14 @@ label > select {
 
 .rep-pad-top {
     padding-top: 5px;
+}
+
+.rep-pad-top-10 {
+    padding-top: 10px;
+}
+
+.rep-bottom {
+    bottom: 5px;
 }
 
 .select2-container .select2-choice {
@@ -178,4 +193,38 @@ input[type="date"] {
 
 .rep-close {
     opacity: 0.7;
+}
+.rep-link{
+    color: #0535d2;
+    text-decoration: underline;
+}
+ strong.required {
+    color: #d3080c !important;
+ font-weight: 700;
+}
+
+.legend-rep-h3{
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 23px;
+    font-size: 22px;
+    line-height: inherit;
+    color: #333;
+    border: 0;
+    font-family: Helvetica, Arial, sans-serif !important;
+    font-weight: 700 !important;
+}
+
+.checkbox-pi {
+     margin-left: 25px;
+ }
+
+.label-pi {
+    font-size: 16px;
+}
+
+ul.no-bullets li
+{
+    list-style-type: none;
 }
