--- a/transaction/app/scripts/templates/transaction/tpl-transaction-company-en.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-company-en.html
@@ -1,1 +1,1 @@
-<div><ul><li>If the company differs from the sponsor, a letter of authorization signed by the manufacturer/sponsor must be provided in folder 1.2.6 of the regulatory transaction.</li></ul></div>
+<div><ul><li>If the company differs from the sponsor, a letter of authorization signed by the manufacturer/sponsor must be provided in section 1.2.6 of the regulatory transaction.</li></ul></div>
