--- a/transaction/app/scripts/templates/transaction/tpl-transaction-save-en.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-save-en.html
@@ -1,1 +1,1 @@
-<div><ul><li>A final regulatory transaction XML file must be included in folder 1.2.1 for each of your REP transactions.</li><li>Refer to the REP guidance document for detailed information.</li></ul></div>
+<div><ul><li>A final regulatory transaction XML file must be included in section 1.2.1 for each of your REP transactions.</li><li>Refer to the REP guidance document for detailed information.</li></ul></div>
