--- a/repDiff/app/scripts/components/fileIODiff/fileSelect.html
+++ b/repDiff/app/scripts/components/fileIODiff/fileSelect.html
@@ -3,22 +3,22 @@
     <div class="row">
         <div class="form-group">
             <div>
-                <row>
-                    <label for="fileLoad" class="col-sm-3">
+                <div class="row">
+                <label for="fileLoad" class="col-sm-3">
                         <span class="field-name">{{'SELECT_LOAD'|translate}}</span>
                     </label>
 
                     <div class="col-sm-8">
                         <input  id="fileLoad" type="file" accept=".xml, .json, .hcsc"
-                               hpfb-file-select="selectCtrl.modelCallback(fileContent)"
-                               root-tag="{{selectCtrl.rootElem}}"/>
+                                data-hpfb-file-select="selectCtrl.modelCallback(fileContent)"
+                               data-root-tag="{{selectCtrl.rootElem}}"/>
                     </div>
-                </row>
-                <row>
+                </div>
+                <div class="row">
                     <div class="col-sm-12" aria-live='polite'>
                         <p><br/><span>{{selectCtrl.status|translate}}</span></p>
                     </div>
-                </row>
+                </div>
             </div>
         </div>
     </div>
