ADR1679-2021 change: text changes and remove the Brexit links.

--- a/certificate/app/scripts/templates/csp/tpl-csp-attest-en.html
+++ b/certificate/app/scripts/templates/csp/tpl-csp-attest-en.html
@@ -1,1 +1,9 @@
-<div><div><p>See section 2.2.2 of the <i>Guidance Document: Certificates of Supplementary Protection</i> for additional details.</p></div></div>
+<div>
+    <div>
+        <p>
+            See section 2.2.2 of the <i>Guidance Document: Certificates of Supplementary Protection</i> for additional details.
+        </p>
+    </div>
+</div>
+
+
