Fix on the release PI prod English and French forms to WCAG with updated WET.

--- a/prod_v42_wcag/GCWeb/v4.0.41/cdts/cdtsfixes.css
+++ b/prod_v42_wcag/GCWeb/v4.0.41/cdts/cdtsfixes.css
@@ -1,4 +1,4 @@
-﻿/********** CDTS fixes file **********/
+/********** CDTS fixes file **********/
 /********** Follow the correct format and link to Github issue for info **********/
 
 
