--- a/repDiff/app/scripts/components/fileIODiff/fileSelect.html
+++ b/repDiff/app/scripts/components/fileIODiff/fileSelect.html
@@ -9,7 +9,7 @@
                     </label>
 
                     <div class="col-sm-8">
-                        <input  id="fileLoad" type="file" accept=".xml, .json, .hcsc" name="fileLoad"
+                        <input  id="fileLoad" type="file" accept=".xml, .json, .hcsc"
                                 data-hpfb-file-select="selectCtrl.modelCallback(fileContent)"
                                data-root-tag="{{selectCtrl.rootElem}}"/>
                     </div>
