Revert "PharmaBio RT Form - UDRA changes - REPPBFORM-619"
This reverts commit cb9d8099103eccb0f82cbe03da5ed2e76287bcd2.

--- a/transaction/app/scripts/templates/transaction/tpl-transaction-comp-id-fr.html
+++ b/transaction/app/scripts/templates/transaction/tpl-transaction-comp-id-fr.html
@@ -1,1 +1,1 @@
-<div><ul><li>Pour obtenir l’ID d’entreprise, consultez la version définitive du fichier d’entreprise (en format XML) délivré par Santé Canada.</li></ul></div>
+<div><ul><li>The “Company ID” must be obtained from the final company XML file, issued by Health Canada.</li></ul></div>
